--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>om oss</h1>
-
+ <h2> Jeg heter Simon</h2>
+ <h2> Om meg: Jeg er 30 år gammel og er student på OsloMET.</h2>
 </body>
 </html>
