--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>om oss</h1>
 <h2> jeg heter ali </h2>
 <h2> Konflikt</h2>
+<p> the var noen kommmer til å hjelper meg idag.</p>
 </body>
 </html>
