--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h2> Konflikt</h2>
 <p> god onsdag til alle sammen</p>
 <p>jeg synes at ali er dum</p>
+<p> hva er det for</p>
 
 </body>
 </html>
