--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p> hva er det forhoho</p>
 <p>dette er i en branch</p>
 <p> this is the new github</p>
+<p> this is my frist and last changes for today</p>
 
 </body>
 </html>m
